        PR c++/28559         * parser.c (cp_parser_elaborated_type_specifier): Also ignore         attributes applied to a TYPENAME_TYPE.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116137 138bc75d-0d04-0410-961f-82ee72b054a4