gcc/cp/parser.c
@@ -10268,8 +10268,11 @@ cp_parser_elaborated_type_specifier (cp_parser* parser,
   /* Allow attributes on forward declarations of classes.  */
   if (attributes)
     {
-      if (tag_type != enum_type && CLASSTYPE_TEMPLATE_INSTANTIATION (type)
-	  && ! processing_explicit_instantiation)
+      if (TREE_CODE (type) == TYPENAME_TYPE)
+	warning (OPT_Wattributes,
+		 "attributes ignored on uninstantiated type");
+      else if (tag_type != enum_type && CLASSTYPE_TEMPLATE_INSTANTIATION (type)
+	       && ! processing_explicit_instantiation)
 	warning (OPT_Wattributes,
 		 "attributes ignored on template instantiation");
       else if (is_declaration && cp_parser_declares_only_class_p (parser))
